--- a/user/cart.html
+++ b/user/cart.html
@@ -86,7 +86,7 @@
 					<!-- LOGO -->
 					<div class="col-md-3">
 						<div class="header-logo">
-							<a href="#" class="logo">
+							<a href="../index.html" target="blank" class="logo">
 								<img width = "80%" src="../img/logo.png" alt="">
 							</a>
 						</div>
