--- a/admin/nhasanxuat.html
+++ b/admin/nhasanxuat.html
@@ -3,7 +3,8 @@
   <head>
      <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Admin-</title>
+    <link rel="icon" href="../img/logo.png" type="image/png" sizes="8x8">
+    <title>Admin-Nhà sản xuất</title>
     <meta name="description" content="Sufee Admin - HTML5 Admin Template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -101,45 +102,45 @@
       <tbody>
         <tr>
           <th scope="row">1</th>
-          <td>mac_MPXU2LL</td>
-          <td>Laptop MacBook 13.3" MPXU2LL</td>
+          <td>Asus</td>
+          <td>Laptop Asus X541UA-GO1384 (I5-7200U) (Đen)</td>
           <td>2</td>
-            <td>39.250.000 ₫</td>
+            <td>12.390.000 ₫</td>
         </tr>
         <tr>
            <th scope="row">2</th>
-          <td>mac_MPXU2LL</td>
-          <td>Laptop MacBook 13.3" MPXU2LL</td>
+          <td>Dell</td>
+          <td>Laptop Dell Vostro 3468 (F3468-70088614) (Đen)</td>
           <td>2</td>
-            <td>39.250.000 ₫</td>
+            <td>12.790.000 ₫</td>
         </tr>
         <tr>
            <th scope="row">3</th>
-          <td>mac_MPXU2LL</td>
-          <td>Laptop MacBook 13.3" MPXU2LL</td>
+          <td>MSI</td>
+          <td>Laptop MSI GP62MVR 7RFX-893XVN (I7-7700HQ)</td>
           <td>2</td>
-            <td>39.250.000 ₫</td>
+            <td>35.990.000 ₫</td>
         </tr>
         <tr>
            <th scope="row">4</th>
-          <td>mac_MPXU2LL</td>
-          <td>Laptop MacBook 13.3" MPXU2LL</td>
+          <td>Dell</td>
+          <td>Laptop Dell Inspiron 14 3467-M20NR21 (I3-7100U) (Đen)</td>
           <td>2</td>
-            <td>39.250.000 ₫</td>
+            <td>11.490.000 ₫</td>
         </tr>
         <tr>
            <th scope="row">5</th>
-          <td>mac_MPXU2LL</td>
+          <td>Apple</td>
           <td>Laptop MacBook 13.3" MPXU2LL</td>
           <td>2</td>
             <td>39.250.000 ₫</td>
         </tr>
         <tr>
            <th scope="row">6</th>
-          <td>mac_MPXU2LL</td>
-          <td>Laptop MacBook 13.3" MPXU2LL</td>
+          <td>Asus</td>
+          <td>LAPTOP ASUS UX510UX-CN204 (I5-7200U) (XÁM)</td>
           <td>2</td>
-            <td>39.250.000 ₫</td>
+            <td>15.490.000 ₫</td>
         </tr>
       </tbody>
     </table>
