--- a/user/cart.html
+++ b/user/cart.html
@@ -236,7 +236,7 @@
 				<!-- row -->
 				<div class="row">
 					<!-- ASIDE -->
-					<div id="aside" class="col-md-4">
+					<div id="aside" class="col-md-2">
 						<!-- aside Widget -->
 						<div class="aside">
 							<h3 class="aside-title">Tài khoản</h3>
@@ -244,7 +244,7 @@
 								<div class="input-checkbox">		
 									<a href="">
 										<label for="brand-1">
-											<a href="updateinfo.html" target="blank">Cập nhật thông tin cá nhân
+											<a href="updateinfo.html" target="blank">Cập nhật thông tin 
 											</a>
 											
 										</label>
@@ -277,7 +277,7 @@
 						</div>
 						<!-- /aside Widget -->				
 					</div>
-					<div id="store" class="col-md-8">
+					<div id="store" class="col-md-10">
 						<div class="col-md-12">
 							<div class="check-out">	 
 
@@ -315,7 +315,7 @@
 						<tr class="cross">
 							<td class="ring-in t-data">
 								<a href="../detail/dell/Dell 5437-D8MMY2.html" target="blank" class="at-in">
-									<img src="../img/Dell/Dell 5437-D8MMY2.png" width="60%" class="img-responsive" alt="">Laptop DELL 5437-D8MMY2
+									<img src="../img/Dell/Dell 5437-D8MMY2.png" width="20%" class="img-responsive" alt="">Laptop DELL 5437-D8MMY2
 								</a>
 
 								<div class="clearfix"> </div>
@@ -335,7 +335,7 @@
 
 					</tr>
 					<tr class="cross1">
-						<td class="t-data ring-in"><a href="../detail/asus/Asus GL503VM-GZ254T.html" target="blank" class="at-in"><img src="../img/Asus/Asus GL503VM-GZ254T.jpg" width="60%" class="img-responsive" alt="">Laptop ASUS GL503VM-GZ254T (I7-7700HQ) (Đen)</a>
+						<td class="t-data ring-in"><a href="../detail/asus/Asus GL503VM-GZ254T.html" target="blank" class="at-in"><img src="../img/Asus/Asus GL503VM-GZ254T.jpg" width="20%" class="img-responsive" alt="">Laptop ASUS GL503VM-GZ254T (I7-7700HQ) (Đen)</a>
 
 							<div class="clearfix"> </div>
 							<div class="close2"> </div></td>
@@ -354,7 +354,7 @@
 
 					</tr>
 					<tr class="cross2">
-						<td class="t-data ring-in"><a href="../detail/apple/mac_MPXR2ZP.html" target="blank" class="at-in"><img src="../img/Mac/MacBook 13.3 MPXR2ZP.png" width="60%" class="img-responsive" alt="">Laptop MacBook 13.3" MPXR2ZP</a>
+						<td class="t-data ring-in"><a href="../detail/apple/mac_MPXR2ZP.html" target="blank" class="at-in"><img src="../img/Mac/MacBook 13.3 MPXR2ZP.png" width="20%" class="img-responsive" alt="">Laptop MacBook 13.3" MPXR2ZP</a>
 
 							<div class="clearfix"> </div>
 							<div class="close3"> </div></td>
