--- a/user/updateinfo.html
+++ b/user/updateinfo.html
@@ -182,7 +182,7 @@
 				<!-- row -->
 				<div class="row">
 					<!-- ASIDE -->
-					<div id="aside" class="col-md-4">
+					<div id="aside" class="col-md-2">
 						<!-- aside Widget -->
 						<div class="aside">
 							<h3 class="aside-title">Tài khoản</h3>
@@ -190,8 +190,7 @@
 								<div class="input-checkbox">		
 									<a href="">
 										<label for="brand-1">
-											<a href="updateinfo.html" target="blank">
-												Cập nhật thông tin cá nhân
+											<a href="updateinfo.html" target="blank">Cập nhật thông tin 
 											</a>
 											
 										</label>
@@ -224,7 +223,7 @@
 						</div>
 						<!-- /aside Widget -->		
 					</div>
-					<div id="store" class="col-md-8">
+					<div id="store" class="col-md-10">
 						<div class="col-md-12">
 						<!-- Billing Details -->
 						<div class="billing-details">
