--- a/user/pay.html
+++ b/user/pay.html
@@ -187,7 +187,7 @@
 				<!-- row -->
 				<div class="row">
 					<!-- ASIDE -->
-					<div id="aside" class="col-md-4">
+					<div id="aside" class="col-md-2">
 						<!-- aside Widget -->
 						<div class="aside">
 							<h3 class="aside-title">Tài khoản</h3>
@@ -195,8 +195,7 @@
 								<div class="input-checkbox">		
 									<a href="">
 										<label for="brand-1">
-											<a href="updateinfo.html" target="blank">
-												Cập nhật thông tin cá nhân
+											<a href="updateinfo.html" target="blank">Cập nhật thông tin 
 											</a>
 											
 										</label>
@@ -229,7 +228,7 @@
 						</div>
 						<!-- /aside Widget -->	
 					</div>
-					<div id="store" class="col-md-8">
+					<div id="store" class="col-md-10">
 						<div class="col-md-12">
 							<!-- Order Details -->
 					<div class="col-md-12 order-details">
