Phân trang final

--- a/type/Laptop_ChoiGame_2.html
+++ b/type/Laptop_ChoiGame_2.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	<link rel="icon" href="../img/logo.png" type="image/png" sizes="8x8">
-	<title>Laptop_Gaming</title>
+	<title>Laptop_Gaming_2</title>
 
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
@@ -751,8 +751,8 @@
 						<div class="store-filter clearfix">
 							<span class="store-qty">Showing 12-20 products</span>
 							<ul class="store-pagination">
-								<li class="active">1</li>
-								<li><a href="Laptop_ChoiGame_2.html">2</a></li>
+								<li><a href="Laptop_ChoiGame_2.html">1</a></li>
+								<li class="active">2</li>
 								<li><a href="#">3</a></li>
 								<li><a href="#">4</a></li>
 								<li><a href="#"><i class="fa fa-angle-right"></i></a></li>
