--- a/producer/Laptop_Dell.html
+++ b/producer/Laptop_Dell.html
@@ -680,7 +680,7 @@
 								<span class="store-qty">Showing 9-10 products</span>
 								<ul class="store-pagination">
 									<li class="active">1</li>
-									<li><a href="#">2</a></li>
+									<li><a href="Laptop_Dell_2.html">2</a></li>
 									<li><a href="#">3</a></li>
 									<li><a href="#">4</a></li>
 									<li><a href="#"><i class="fa fa-angle-right"></i></a></li>
