--- a/type/Laptop_VanPhong.html
+++ b/type/Laptop_VanPhong.html
@@ -734,7 +734,7 @@
 							<span class="store-qty">Showing 12-20 products</span>
 							<ul class="store-pagination">
 								<li class="active">1</li>
-								<li><a href="#">2</a></li>
+								<li><a href="Laptop_VanPhong_2.html">2</a></li>
 								<li><a href="#">3</a></li>
 								<li><a href="#">4</a></li>
 								<li><a href="#"><i class="fa fa-angle-right"></i></a></li>
