--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
 										</div>
 									</div>
 									<div class="cart-summary">
-										<small>3 Item(s) selected</small>
-										<h5>SUBTOTAL: $2940.00</h5>
+										<small>3 vật phẩm được chọn </small>
+										<h5>TỔNG CỘNG: 1,000,000 ₫</h5>
 									</div>
 									<div class="cart-btns">
 										<a href="./user/cart.html">Xem giỏ hàng</a>
