--- a/detail/apple/mac_MNYM2SA.html
+++ b/detail/apple/mac_MNYM2SA.html
@@ -124,7 +124,7 @@
 									<span>Giỏ hàng</span>
 									<div class="qty">0</div>
 								</a>
-								<!-- <div class="cart-dropdown">
+								<div class="cart-dropdown">
 									<div class="cart-list">
 										<div class="product-widget">
 											<div class="product-img">
@@ -149,14 +149,14 @@
 										</div>
 									</div>
 									<div class="cart-summary">
-										<small>3 Item(s) selected</small>
-										<h5>SUBTOTAL: $2940.00</h5>
+										<small>3 vật phẩm được chọn </small>
+										<h5>TỔNG CỘNG: 1,000,000 ₫</h5>
 									</div>
 									<div class="cart-btns">
-										<a href="#">View Cart</a>
-										<a href="#">Checkout  <i class="fa fa-arrow-circle-right"></i></a>
+										<a href="../../user/cart.html">Xem giỏ hàng</a>
+										<a href="#">Thanh toán<i class="fa fa-arrow-circle-right"></i></a>
 									</div>
-								</div> -->
+								</div>
 							</div>
 							<!-- /Cart -->
 
