--- a/detail/dell/Dell XPS13 9365-K7DWW2.html
+++ b/detail/dell/Dell XPS13 9365-K7DWW2.html
@@ -110,7 +110,7 @@
 										<span>Giỏ hàng</span>
 										<div class="qty">0</div>
 									</a>
-									<!--
+									
 									<div class="cart-dropdown">
 										<div class="cart-list">
 											<div class="product-widget">
@@ -126,14 +126,14 @@
 											</div>
 										</div>
 										<div class="cart-summary">
-											<small>1 Item(s) selected</small>
-											<h5>SUBTOTAL: 54.490.000 ₫</h5>
+											<small>1 vật phẩm được chọn</small>
+											<h5>TỔNG CỘNG: 54.490.000 ₫</h5>
 										</div>
 										<div class="cart-btns">
-											<a href="#">View Cart</a>
-											<a href="#">Checkout  <i class="fa fa-arrow-circle-right"></i></a>
+											<a href="../../user/cart.html">Xem giỏ hàng</a>
+											<a href="#">Thanh toán<i class="fa fa-arrow-circle-right"></i></a>
 										</div>
-									</div>-->
+									</div>
 								</div>
 								<!-- /Cart -->
 
