--- a/index2.html
+++ b/index2.html
@@ -165,9 +165,40 @@
 		</header>
 		<!-- /HEADER -->
 		<!-- NAVIGATION -->
-	<nav id="navigation">
-	</nav>
-	<!-- /NAVIGATION -->
+		<!-- NAVIGATION -->
+		<nav id="navigation">
+			<!-- container -->
+			<div class="container">
+				<!-- responsive-nav -->
+				<div id="responsive-nav">
+					<!-- NAV -->
+					<ul class="main-nav nav navbar-nav">
+						<li class="active"><a href="#"><i class="fas fa-home"></i> Trang chủ</a></li>
+						
+						<li class="dropdown"><a href="#"><i class="fas fa-bars"></i> Xem theo loại sản phẩm</a>
+							<div class="dropdown-content">
+								<a href="./type/Laptop_ChoiGame.html">Laptop Gaming</a>
+								<a href="./type/Laptop_VanPhong.html">Laptop Văn phòng</a>
+								<a href="./type/Laptop_DoanhNhan.html">Laptop Doanh nhân</a>
+								<a href="./type/Laptop_UltraBook.html">Laptop UltraBook</a>
+							</div>
+						</li>
+						<li class="dropdown"><a href="#"><i class="fas fa-bars"></i> Xem theo nhà sản xuất</a>
+							<div class="dropdown-content">
+								<a href="./producer/Laptop_Dell.html">DELL</a>
+								<a href="./producer/Laptop_Asus.html">ASUS</a>
+								<a href="./producer/Laptop_MSI.html">MSI</a>
+								<a href="./producer/Laptop_MacBook.html">APPLE</a>
+							</div>
+						</li>
+					</ul>
+					<!-- /NAV -->
+				</div>
+				<!-- /responsive-nav -->
+			</div>
+			<!-- /container -->
+		</nav>
+		<!-- /NAVIGATION -->
 
 	
 	
