--- a/login/SignUp.html
+++ b/login/SignUp.html
@@ -189,7 +189,7 @@
 				    <input type="password" name="password" placeholder="Password" />
 				    <input type="password" name="password2" placeholder="Retype password" />
 				    <form>
-				    	<div class="g-recaptcha" data-sitekey="6LfPNVUUAAAAAGKNsEeXiuT2O_r_W73iMQ2Baw6p"></div>
+				    	<div class="g-recaptcha" data-theme="dark" data-callback="recaptcha_callback" data-sitekey="6LfPNVUUAAAAAGKNsEeXiuT2O_r_W73iMQ2Baw6p"></div>
 				    </form>
 				    
 				    <a href="../AfterLog.html" class="primary-btn order-submit">Sign up</a>
@@ -300,12 +300,15 @@
 		</footer>
 		<!-- /FOOTER -->
 		<!-- jQuery Plugins -->
+
 		<script src="../js/jquery.min.js"></script>
 		<script src="../js/bootstrap.min.js"></script>
 		<script src="../js/slick.min.js"></script>
 		<script src="../js/nouislider.min.js"></script>
 		<script src="../js/jquery.zoom.min.js"></script>
 		<script src="../js/main.js"></script>
+		<script src='https://www.google.com/recaptcha/api.js'></script>
+		<script src='https://www.google.com/recaptcha/api.js?hl=vn'></script>
 
 	</body>
 </html>
